# postmortem-shield

./: AGENTS.md  Dockerfile  IDEA.md  Makefile  README.md  docker-compose.yml  knowledge.md  pyproject.toml
.agents/skills/prevention-generation/: SKILL.md
.codex/: config.toml
.github/workflows/: ci.yml
deploy/helm/postmortem-shield/: Chart.yaml  values.yaml
deploy/helm/postmortem-shield/templates/: deployment.yaml  service.yaml
docs/adr/: ADR-0001-schema-first-extraction.md  ADR-0002-validator-gated-artifacts.md
prompts/extraction/: system.md
prompts/generation/: chaos.md  kyverno.md  opa.md  prometheus.md
samples/postmortems/: catalog-cache-stampede.md  payment-api-latency.md
src/postmortem_shield/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/postmortem_shield/api/: __init__.py  main.py
src/postmortem_shield/extractors/: __init__.py  deterministic.py
src/postmortem_shield/generators/: __init__.py  chaos.py  kyverno.py  opa.py  prometheus.py
src/postmortem_shield/models/: __init__.py  artifact.py  incident.py
src/postmortem_shield/providers/: __init__.py  base.py  mock.py
src/postmortem_shield/validators/: __init__.py  kubernetes.py  policy.py  prometheus.py
tests/: test_api.py  test_extractor.py  test_pipeline.py  test_validators.py
