[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "postmortem-shield"
version = "0.1.0"
description = "Convert incident postmortems into validated prevention artifacts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ankit" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "jinja2>=3.1.0",
  "pydantic>=2.8.0,<3.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "typer>=0.12.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.0,<1.0.0"
]

[project.scripts]
postmortem-shield = "postmortem_shield.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/postmortem_shield"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
